# plombery

./: .env.example  .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  README.md  alembic.ini  docker-compose.yaml  index.html  mkdocs.yml  plombery.config.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  sitemap.xml
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/workflows/: docs.yaml  pypi-publish.yaml  test-frontend.yaml  test.yaml
assets/stylesheets/: extra.css
configuration/: index.html
configuration/auth/generic-oauth/: index.html
configuration/auth/google/: index.html
configuration/auth/microsoft/: index.html
configuration/notifications/: index.html
configuration/system/: index.html
create-a-pipeline/: index.html
deployment/: index.html
docs/: a-better-pipeline.md  configuration.md  create-a-pipeline.md  deployment.md  get-started.md  index.md  pipelines.md  tasks.md  triggers.md
docs/assets/stylesheets/: extra.css  home-page.css  home.css
docs/configuration/: database.md  index.md  system.md
docs/configuration/auth/: generic-oauth.md  google.md  microsoft.md
docs/configuration/notifications/: index.md
docs/overrides/: home.html  main.html
docs/recipes/: certificates-expiration.md
email-templates/: config.production.js  package-lock.json  package.json
email-templates/src/templates/: transactional.html
examples/: .gitignore  requirements.txt  run.ps1  run.sh
examples/dummy/: app.py  dummy_pipeline.py
examples/src/: app.py  dags.py  sales_pipeline.py  simple.py  ssl_certificates.py  sync_pipeline.py
frontend/: index.html  package.json  pnpm-lock.yaml  tailwind.config.cjs  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/pages/: _app.tsx  index.tsx
frontend/src/: App.tsx  Router.tsx  constants.ts  globals.css  globals.scss  http-client.ts  main.tsx  repository.ts  socket.ts  types.ts  utils.ts
frontend/src/components/: Breadcrumbs.tsx  CopyButton.tsx  DagDetailsPanel.tsx  DagViewer.tsx  DataViewer.tsx  DataViewerDialog.tsx  Dialog.tsx  HandsonTable.tsx  JsonSchemaForm.tsx  LogViewer.tsx  ManualRunDialog.tsx  PageLayout.tsx  PipelineRunDetails.tsx  PipelinesList.tsx  Popover.tsx  RangeSlider.tsx  RunningIcon.tsx  RunsDurationChart.tsx  RunsList.tsx  RunsStatusChart.tsx  SettingsMenu.tsx  StatusBadge.tsx  TaskRunDetails.tsx  TaskRunStatusIcon.tsx  Tasks.tsx  Timer.tsx  TracebackInfoDialog.tsx  TriggerParamsDialog.tsx  TriggersList.tsx  UserInfo.tsx  UserMenu.tsx
frontend/src/contexts/: AuthContext.tsx  WebSocketContext.tsx
frontend/src/pages/: index.tsx  login.tsx
frontend/styles/: globals.css
get-started/: index.html
mario/: __init__.py  cli.py  config.py  constants.py  graph.py  schemas.py  settings.py
mario/api/: __init__.py  authentication.py  middlewares.py
mario/database/: base.py  models.py  repository.py  schemas.py
mario/logger/: __init__.py  formatter.py  logger.py  streams.py  web_socket_handler.py
mario/notifications/: __init__.py  helpers.py  send_email.py  send_msteams.py  templates.py
mario/orchestrator/: __init__.py  data_storage.py  executor.py
mario/pipeline/: __init__.py  _utils.py  context.py  pipeline.py  task.py  trigger.py
mario/static/: index.html
mario/websocket/: __init__.py
overrides/: home.html
pipelines/: index.html
plombery/: __init__.py  _version.py
plombery/api/: __init__.py
plombery/database/: repository.py  schemas.py
plombery/logger/: web_socket_handler.py
plombery/pipeline/: __init__.py
recipes/certificates-expiration/: index.html
search/: search_index.json
src/plombery/: __init__.py  _version.py  bus.py  config.py  exceptions.py  schemas.py  utils.py  websocket.py
src/plombery/alembic/: env.py  (+1 more)
tasks/: index.html
tests/: conftest.py  pipeline_1.py  test_api.py  test_dags.py  test_logging.py
triggers/: index.html
(+85 files in other folders)
